Adds two elements to the project: a chair and a table

--- a/03_BuildingEscape/BuildingEscape/Config/DefaultGame.ini
+++ b/03_BuildingEscape/BuildingEscape/Config/DefaultGame.ini
@@ -1,2 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=FC20F298514E93EE5CF87DA63D42F0EE
+ProjectID=A1BA255348428CF808F1619F9EDC5B37
+CompanyName=
+CompanyDistinguishedName=
+
+[StartupActions]
+bAddPacks=True
+InsertPack=(PackSource="StarterContent.upack,PackName="StarterContent")
