modifies the gitignore file, creates room, adds non working trigger volume that should open the door

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,9 @@ Binaries
 DerivedDataCache
 Intermediate
 Saved
-BuildingEscape/Content/StarterContent
+StarterContent
 
 *.VC.db
 .DS_Store
 
 **/xcuserdata
-**/
