set default pawn component to custom changing gamemode

--- a/03_BuildingEscape/BuildingEscape/Config/DefaultEngine.ini
+++ b/03_BuildingEscape/BuildingEscape/Config/DefaultEngine.ini
@@ -2,6 +2,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/NewMap.NewMap
 GameDefaultMap=/Game/NewMap.NewMap
+GlobalDefaultGameMode=/Game/MyBuildingEscapeGameMode_BP.MyBuildingEscapeGameMode_BP_C
+GlobalDefaultServerGameMode=/Script/BuildingEscape.BuildingEscapeGameMode
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
